--- a/client/src/assets/css/setcion/_news.css
+++ b/client/src/assets/css/setcion/_news.css
@@ -11,6 +11,7 @@
     width: 20%;
     font-size: 1rem;
     font-weight: 700;
+    text-align: center;
     padding-right: 10px;
     box-sizing: border-box;
     border-right: 1px solid rgba(0, 0, 0, 0.15);
