--- a/client/src/assets/css/setcion/_leagueDetail.css
+++ b/client/src/assets/css/setcion/_leagueDetail.css
@@ -478,6 +478,14 @@
         width: 100%;
     }
 
+    .detail__info .right .info h1 {
+        font-size: 1rem;
+    }
+
+    .detail__info .right .info p {
+        font-size: 1.5rem;
+    }
+
     .detail__info .right .info .teams__logo {
         width: 90%;
     }
@@ -523,6 +531,9 @@
         width: 100%;
         text-align: center;
         margin: 10px 0;
+        font-size: 1rem;
+        font-weight: 700;
+        color: #B8BAC1;
     }
 
     .commentWrap>ul>li>.bottom {
