--- a/client/src/assets/css/setcion/_news.css
+++ b/client/src/assets/css/setcion/_news.css
@@ -37,7 +37,7 @@
     text-underline-position: under;
 }
 
-.main__news .swiper-button-next,
+/* .main__news .swiper-button-next,
 .main__news .swiper-button-prev {
     display: none;
-}
+} */
