--- a/client/src/assets/css/setcion/_playDetail.css
+++ b/client/src/assets/css/setcion/_playDetail.css
@@ -275,7 +275,7 @@
 /* play__bottom */
 .play__bottom {
     width: 100%;
-    height: 2000px;
+    padding-bottom: 5vh;
 
     background-color: #F2F3F4;
     display: flex;
