--- a/client/src/assets/css/setcion/_board.css
+++ b/client/src/assets/css/setcion/_board.css
@@ -153,8 +153,8 @@
     justify-content: space-between;
 }
 
-.board__list>ul>li>.list__left>.left__desc>.boardImg {
-    width: 100px;
+.board__list>ul>li>.list__left>.left__desc>.boardImg>img {
+    max-height: 100px;
 }
 
 .board__list>ul>li>.list__left>.left__desc>p {
