--- a/client/src/assets/css/setcion/_leagueDetail.css
+++ b/client/src/assets/css/setcion/_leagueDetail.css
@@ -11,7 +11,7 @@
 
 .leagueAside .leagueAside__ad {
     width: 300px;
-    height: 150px;
+    height: 300px;
     background-color: #efefef;
 }
 
@@ -32,7 +32,7 @@
 }
 
 .leagueAside .leagueAside__rank ul {
-    height: calc(100vh - 275px);
+    height: calc(100vh - 425px);
     overflow-y: scroll;
 }
 
@@ -356,6 +356,12 @@
     background-position: center center;
     background-repeat: no-repeat;
     margin-right: 10px;
+}
+
+.result__info .result__right {
+    font-size: 1rem;
+    font-weight: 700;
+    color: #B8BAC1;
 }
 
 .result__info .result__right a {
