--- a/client/src/assets/css/setcion/_mypage.css
+++ b/client/src/assets/css/setcion/_mypage.css
@@ -532,7 +532,7 @@
     }
 
     .mypage__board .list__wrap .list {
-        width: 48%;
+        width: 100%;
         height: 100px;
         flex-direction: column;
         justify-content: center;
@@ -584,7 +584,7 @@
     }
 
     .mypage__board .reple__wrap {
-        width: 80%;
+        width: 100%;
     }
 }
 
@@ -592,6 +592,11 @@
     #mypage {
         padding-left: 0;
         padding-top: 170px;
+    }
+
+    .right__text svg {
+        width: 16px;
+        height: 16px;
     }
 
     .mypage__content .mypage__top ul {
@@ -622,7 +627,7 @@
     }
 
     .mypage__board .reple__wrap {
-        width: 80%;
+        width: 100%;
     }
 
     .mypage__content .mypage__top .right__text div {
